Implemented images controller